--- a/Informe_calidad_cuencas.Rmd
+++ b/Informe_calidad_cuencas.Rmd
@@ -323,7 +323,7 @@ datos <- datos %>%
 ```
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-m5_cant <- datos %>% 
+m4_cant <- datos %>% 
   select(m4) %>% 
   filter(m4 == 100) %>% 
  summarise(prueba = n(),
@@ -367,7 +367,7 @@ datos %>%
 
 ### Medida 5 - Índice de elementos omitidos
 
-```{r, , echo=FALSE, warning=FALSE, message=FALSE}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 datos <- datos %>% 
   mutate(m5 = signif(((ele_corr-g2)/ele_corr)*100, digits = 6)) 
 ```
@@ -396,7 +396,7 @@ m5_resumen %>%
   kable(booktabs = TRUE,
         format = "latex", 
         col.names = c("Media", "Mediana", "Máximo", "Mínimo", "Rango", "Desviación Estándar"), 
-        caption = "\\label{tabla04}Resumen de la medida 5", 
+        caption = "\\label{tabla05}Resumen de la medida 5", 
         digits = 3) %>% 
   kable_styling(
     latex_options = c("striped","condensed", "HOLD_position"),
@@ -406,7 +406,7 @@ m5_resumen %>%
 
 ```
 
-```{r grafico5, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "Histograma del porcentaje de elementos cuya longitud es menor a 2,50 metros"}
+```{r grafico5, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "Histograma del porcentaje de elementos cuya longitud es mayor a 2,50 metros"}
 datos %>% 
   ggplot(aes(m5)) + 
   geom_histogram(fill = "tomato1", color ="grey28") +
@@ -417,10 +417,332 @@ datos %>%
 
 ### Medida 6 - Índice de elementos omitidos
 
-```{r, , echo=FALSE, warning=FALSE, message=FALSE}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 datos <- datos %>% 
   mutate(m6 = signif((g3/ele_corr)*100, digits = 6)) 
 ```
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+m6_cant <- datos %>% 
+  select(m6) %>% 
+  filter(m6 == 100) %>% 
+ summarise(prueba = n(),
+           porcentaje = signif((prueba/203)*100, digits = 4))
+```
+
+
+```{r tabla06, echo=FALSE, warning=FALSE, message=FALSE}
+m6_resumen <- datos %>% 
+  summarise(m6_media = signif(mean(m6), digits = 4),
+            m6_mediana = signif(median(m6), digits = 4),
+            m6_max = signif(max(m6), digits = 5),
+            m6_min = signif(min(m6), digits = 4),
+            m6_rango = (m6_max-m6_min),
+            m6_de = signif(sqrt(var(m6)), digits = 4))
+
+
+require(knitr)
+require(kableExtra)
+m6_resumen %>% 
+  kable(booktabs = TRUE,
+        format = "latex", 
+        col.names = c("Media", "Mediana", "Máximo", "Mínimo", "Rango", "Desviación Estándar"), 
+        caption = "\\label{tabla06}Resumen de la medida 6", 
+        digits = 3) %>% 
+  kable_styling(
+    latex_options = c("striped","condensed", "HOLD_position"),
+    position = "center",
+    full_width = FALSE
+  )
+
+```
+
+
+```{r grafico6, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "Histograma del porcentaje de atributos sin valores"}
+datos %>% 
+  ggplot(aes(m6)) + 
+  geom_histogram(fill = "tomato1", color ="grey28") +
+  scale_x_continuous(name ="Porcentaje de instancias") +
+  scale_y_continuous(name = "Cantidad")
+```
+
+
+### Medida 7 - Índice de elementos omitidos
+
+Es el caso del atributo hyd que aún hay que analizar bien cual es la medida.
+
+## Aspectos topológicos
+
+### Medida 8 - Índice de fallos en conexión punto-curva
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+datos <- datos %>% 
+  mutate(m8 = signif((t1/intersecc)*100, digits = 6)) 
+```
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+m8_cant <- datos %>% 
+  select(m8) %>% 
+  filter(m8 == 0) %>% 
+ summarise(prueba = n(),
+           porcentaje = signif((prueba/203)*100, digits = 4))
+```
+
+
+```{r tabla08, echo=FALSE, warning=FALSE, message=FALSE}
+m8_resumen <- datos %>% 
+  summarise(m8_media = signif(mean(m8), digits = 4),
+            m8_mediana = signif(median(m8), digits = 4),
+            m8_max = signif(max(m8), digits = 5),
+            m8_min = signif(min(m8), digits = 4),
+            m8_rango = (m8_max-m8_min),
+            m8_de = signif(sqrt(var(m8)), digits = 4))
+
+
+require(knitr)
+require(kableExtra)
+m8_resumen %>% 
+  kable(booktabs = TRUE,
+        format = "latex", 
+        col.names = c("Media", "Mediana", "Máximo", "Mínimo", "Rango", "Desviación Estándar"), 
+        caption = "\\label{tabla08}Resumen de la medida 8", 
+        digits = 3) %>% 
+  kable_styling(
+    latex_options = c("striped","condensed", "HOLD_position"),
+    position = "center",
+    full_width = FALSE
+  )
+
+```
+
+```{r grafico8, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "Histograma del porcentaje de fallos de en la conexión de elementos"}
+datos %>% 
+  ggplot(aes(m8)) + 
+  geom_histogram(fill = "tomato1", color ="grey28") +
+  scale_x_continuous(name ="Porcentaje de instancias") +
+  scale_y_continuous(name = "Cantidad")
+```
+
+### Medida 9 - Índice de cumplimiento de las reglas del esquema conceptual
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+datos <- datos %>% 
+  mutate(m9 = signif(((ele_corr-t2)/ele_corr)*100, digits = 6)) 
+```
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+m9_cant <- datos %>% 
+  select(m9) %>% 
+  filter(m9 == 100) %>% 
+ summarise(prueba = n(),
+           porcentaje = signif((prueba/203)*100, digits = 4))
+```
+
+
+```{r tabla09, echo=FALSE, warning=FALSE, message=FALSE}
+m9_resumen <- datos %>% 
+  summarise(m9_media = signif(mean(m9), digits = 4),
+            m9_mediana = signif(median(m9), digits = 4),
+            m9_max = signif(max(m9), digits = 4),
+            m9_min = signif(min(m9), digits = 4),
+            m9_rango = (m9_max-m9_min),
+            m9_de = signif(sqrt(var(m9)), digits = 3))
+
+
+require(knitr)
+require(kableExtra)
+m9_resumen %>% 
+  kable(booktabs = TRUE,
+        format = "latex", 
+        col.names = c("Media", "Mediana", "Máximo", "Mínimo", "Rango", "Desviación Estándar"), 
+        caption = "\\label{tabla09}Resumen de la medida 9", 
+        digits = 3) %>% 
+  kable_styling(
+    latex_options = c("striped","condensed", "HOLD_position"),
+    position = "center",
+    full_width = FALSE
+  )
+```
+
+```{r grafico9, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "Histograma del porcentaje de elementos digitalizados en sentido del escurrimiento del agua"}
+datos %>% 
+  ggplot(aes(m9)) + 
+  geom_histogram(fill = "tomato1", color ="grey28") +
+  scale_x_continuous(name ="Porcentaje de instancias") +
+  scale_y_continuous(name = "Cantidad")
+```
+
+## Aspectos globales
+
+### Medida 10 - Índice de conexión 1
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+datos <- datos %>% 
+  mutate(m10 = signif(((extremos-gl1)/extremos)*100, digits = 6)) 
+```
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+m10_cant <- datos %>% 
+  select(m10) %>% 
+  filter(m10 == 100) %>% 
+ summarise(prueba = n(),
+           porcentaje = signif((prueba/203)*100, digits = 4))
+```
+
+```{r tabla10, echo=FALSE, warning=FALSE, message=FALSE}
+m10_resumen <- datos %>% 
+  summarise(m10_media = signif(mean(m10), digits = 4),
+            m10_mediana = signif(median(m10), digits = 4),
+            m10_max = signif(max(m10), digits = 4),
+            m10_min = signif(min(m10), digits = 3),
+            m10_rango = (m10_max-m10_min),
+            m10_de = signif(sqrt(var(m10)), digits = 3))
+
+
+require(knitr)
+require(kableExtra)
+m10_resumen %>% 
+  kable(booktabs = TRUE,
+        format = "latex", 
+        col.names = c("Media", "Mediana", "Máximo", "Mínimo", "Rango", "Desviación Estándar"), 
+        caption = "\\label{tabla10}Resumen de la medida 10", 
+        digits = 3) %>% 
+  kable_styling(
+    latex_options = c("striped","condensed", "HOLD_position"),
+    position = "center",
+    full_width = FALSE
+  )
+```
+
+```{r grafico10, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "Histograma del porcentaje de elementos que escurren de acuerdo al criterio 1"}
+datos %>% 
+  ggplot(aes(m10)) + 
+  geom_histogram(fill = "tomato1", color ="grey28") +
+  scale_x_continuous(name ="Porcentaje de instancias") +
+  scale_y_continuous(name = "Cantidad")
+```
+
+### Medida 11 - Índice de conexión 2
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+datos <- datos %>% 
+  mutate(m11 = signif(((extremos-gl2)/extremos)*100, digits = 6)) 
+```
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+m11_cant <- datos %>% 
+  select(m11) %>% 
+  filter(m11 == 100) %>% 
+ summarise(prueba = n(),
+           porcentaje = signif((prueba/203)*100, digits = 4))
+```
+
+```{r tabla11, echo=FALSE, warning=FALSE, message=FALSE}
+m11_resumen <- datos %>% 
+  summarise(m11_media = signif(mean(m11), digits = 4),
+            m11_mediana = signif(median(m11), digits = 4),
+            m11_max = signif(max(m11), digits = 4),
+            m11_min = signif(min(m11), digits = 3),
+            m11_rango = (m11_max-m11_min),
+            m11_de = signif(sqrt(var(m11)), digits = 4))
+
+
+require(knitr)
+require(kableExtra)
+m11_resumen %>% 
+  kable(booktabs = TRUE,
+        format = "latex", 
+        col.names = c("Media", "Mediana", "Máximo", "Mínimo", "Rango", "Desviación Estándar"), 
+        caption = "\\label{tabla11}Resumen de la medida 11", 
+        digits = 3) %>% 
+  kable_styling(
+    latex_options = c("striped","condensed", "HOLD_position"),
+    position = "center",
+    full_width = FALSE
+  )
+```
+
+```{r grafico11, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "Histograma del porcentaje de elementos que escurren de acuerdo al criterio 2"}
+datos %>% 
+  ggplot(aes(m11)) + 
+  geom_histogram(fill = "tomato1", color ="grey28") +
+  scale_x_continuous(name ="Porcentaje de instancias") +
+  scale_y_continuous(name = "Cantidad")
+```
+
+
+### Medida 12 - Índice de conexión 3
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+datos <- datos %>% 
+  mutate(m12 = signif(((extremos-gl3)/extremos)*100, digits = 6)) 
+```
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+m12_cant <- datos %>% 
+  select(m12) %>% 
+  filter(m12 == 100) %>% 
+ summarise(prueba = n(),
+           porcentaje = signif((prueba/203)*100, digits = 3))
+```
+
+```{r tabla12, echo=FALSE, warning=FALSE, message=FALSE}
+m12_resumen <- datos %>% 
+  summarise(m12_media = signif(mean(m12), digits = 4),
+            m12_mediana = signif(median(m12), digits = 4),
+            m12_max = signif(max(m12), digits = 4),
+            m12_min = signif(min(m12), digits = 3),
+            m12_rango = (m12_max-m12_min),
+            m12_de = signif(sqrt(var(m12)), digits = 4))
+
+
+require(knitr)
+require(kableExtra)
+m12_resumen %>% 
+  kable(booktabs = TRUE,
+        format = "latex", 
+        col.names = c("Media", "Mediana", "Máximo", "Mínimo", "Rango", "Desviación Estándar"), 
+        caption = "\\label{tabla12}Resumen de la medida 12", 
+        digits = 3) %>% 
+  kable_styling(
+    latex_options = c("striped","condensed", "HOLD_position"),
+    position = "center",
+    full_width = FALSE
+  )
+```
+
+```{r grafico12, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "Histograma del porcentaje de elementos que escurren de acuerdo al criterio 3"}
+datos %>% 
+  ggplot(aes(m12)) + 
+  geom_histogram(fill = "tomato1", color ="grey28") +
+  scale_x_continuous(name ="Porcentaje de instancias") +
+  scale_y_continuous(name = "Cantidad")
+```
+
+
+## Resumen
+
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+datos <- datos %>% 
+  mutate(resumen1 = signif((m1/100)+((100-m2)/100)+((100-m3)/100)+(m4/100)+(m5/100)+(m6/100)+((100-m8)/100)+(m9/100)+(m10/100), digits = 5)) 
+```
+
+
+```{r grafico12, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "Histograma del porcentaje de elementos que escurren de acuerdo al criterio 3"}
+datos %>% 
+  ggplot(aes(resumen1)) + 
+  geom_histogram(fill = "tomato1", color ="grey28") +
+  scale_x_continuous(name ="Porcentaje de instancias") +
+  scale_y_continuous(name = "Cantidad")
+```
+
+
+
+
+
+
+
 
 
 
